@@ -8,6 +8,7 @@
 4. Initialise network proxy factory when starting.
 5. If artist, album, and title are empty in replaygain dialog, then show
    filename in title column.
+6. Opus does not use replaygain peak tags, so do not write.
 
 2.3.2
 -----
